# scribus

./: CMakeLists.txt  CMakeLists_Dependencies.cmake  README-contentpalette-2.md  README-contentpalette.md  README-snap-guide.md  README-swap-vertically.md
scribus/plugins/: CMakeLists.txt
scribus/plugins/colorwheel/: cwdialog.cpp
scribus/plugins/export/: CMakeLists.txt
scribus/plugins/fileloader/scribus12format/: scribus12format.cpp
scribus/plugins/fileloader/scribus134format/: scribus134format.cpp
scribus/plugins/fileloader/scribus13format/: scribus13format.cpp
scribus/plugins/fileloader/scribus150format/: scribus150format.cpp  scribus150format_save.cpp
scribus/plugins/gettext/: CMakeLists.txt
scribus/plugins/import/cgm/: importcgm.cpp
scribus/plugins/import/drw/: importdrw.cpp
scribus/plugins/import/emf/: importemf.cpp
scribus/plugins/import/idml/: importidml.cpp
scribus/plugins/import/odg/: importodg.cpp
scribus/plugins/import/pages/: importpages.cpp
scribus/plugins/import/pct/: importpct.cpp
scribus/plugins/import/pdf/: slaoutput.cpp
scribus/plugins/import/ps/: importps.cpp
scribus/plugins/import/svg/: svgplugin.cpp
scribus/plugins/import/svm/: importsvm.cpp
scribus/plugins/import/viva/: importviva.cpp
scribus/plugins/import/wpg/: importwpg.cpp
scribus/plugins/scripter/: api_Scripter.dialogs.mainWindow.api  api_Scripter.dialogs.outline.api  api_imageitem.cpp
scribus/plugins/scriptplugin/: cmdmani.cpp  prefs_scripter.cpp  prefs_scripter.h  prefs_scripterbase.ui  scriptercore.cpp  scriptercore.h  scriptplugin.cpp  scriptplugin.h
(+71 files in other folders)
