add_subdirectory(export)
add_subdirectory(import)
add_subdirectory(barcodegenerator)
add_subdirectory(colorwheel)
add_subdirectory(fileloader)
add_subdirectory(fontpreview)
add_subdirectory(gettext)
# add_subdirectory(newfromtemplateplugin)
add_subdirectory(saveastemplateplugin)
if(WANT_SCRIPTER2)
  #scripter2
  message(STATUS "Building with Scripter 2")
  add_subdirectory(scripter)
elseif(WANT_SCRIPTER_PYBIND11)
  message(STATUS "Building with Scripter Pybind11")
  add_subdirectory(scripter-pybind11)
else()
  #scripter1
  if(NOT WIN32)
    message(STATUS "Building with Scripter 1")
    add_subdirectory(scriptplugin)
  endif()
endif()
add_subdirectory(short-words)
add_subdirectory(tools)
add_subdirectory(picbrowser)
add_subdirectory(shapes)

add_subdirectory(scribusAPI)
add_subdirectory(applyStyle)
# add_subdirectory(runCommand)
add_subdirectory(actionSearch)
# add_subdirectory(tableOfContents)
add_subdirectory(projectSummary)

# add_subdirectory(myplugin)
